Update Icon Color

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "quizz-app",
+    "name": "Grades & Appellations",
     "slug": "quizz-app",
     "version": "1.0.0",
     "orientation": "portrait",
